# rsoi-05

./: .dockerignore  .gitignore
.github/workflows/: classroom.yml
bonuses/: Cargo.toml  Dockerfile
bonuses/src/: main.rs  repository.rs  server.rs  test.rs
booking-system/: bonuses.yml  flights.yml  gateway.yml  keycloak.yml  postgres.yml  tickets.yml
flights/: Cargo.toml  Dockerfile
flights/src/: main.rs  repository.rs  server.rs  test.rs
gateway/: Cargo.toml  Dockerfile
gateway/src/: main.rs  server.rs  test.rs
jwtchecker/: Cargo.toml
jwtchecker/src/: lib.rs
requester/: Cargo.toml
requester/src/: lib.rs
structs/: Cargo.toml
structs/src/: lib.rs
tickets/: Cargo.toml  Dockerfile
tickets/src/: main.rs  repository.rs  server.rs  test.rs
v1/postman/: collection.json  environment.json
